--- a/package.json
+++ b/package.json
@@ -1,45 +1,33 @@
 {
-  "name": "m3p2-squad-2",
+  "name": "devinhouse-proj2mod1",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "test:unit": "vue-cli-service test:unit",
-    "test:e2e": "vue-cli-service test:e2e",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^1.1.3",
+    "axios": "^0.27.2",
+    "bootstrap": "^5.2.0-beta1",
     "core-js": "^3.8.3",
-    "vee-validate": "^4.7.2",
+    "vee-validate": "^4.5.11",
     "vue": "^3.2.13",
-    "vue-gravatar": "^1.4.1",
-    "vue-router": "^4.0.3",
-    "vuex": "^4.0.0",
-    "vue-the-mask": "^0.11.1",
+    "vue-loading-overlay": "5.0",
+    "vue-router": "^4.0.15",
+    "vue-toast-notification": "^3.0.2",
+    "vue3-cookies": "^1.0.6",
     "vue3-gravatar": "^3.0.0",
-    "vue-cookies": "^1.8.1",
-    "vue-m-dialog": "^3.0.0",
-    "@meforma/vue-toaster": "^1.3.0"
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-e2e-cypress": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-plugin-router": "~5.0.0",
-    "@vue/cli-plugin-unit-jest": "~5.0.0",
-    "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
-    "@vue/test-utils": "^2.0.0-0",
-    "@vue/vue3-jest": "^27.0.0-alpha.1",
-    "babel-jest": "^27.0.6",
-    "cypress": "^9.7.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
-    "jest": "^27.0.5"
+    "eslint-plugin-vue": "^8.0.3"
   },
   "eslintConfig": {
     "root": true,
@@ -53,26 +41,12 @@
     "parserOptions": {
       "parser": "@babel/eslint-parser"
     },
-    "rules": {},
-    "overrides": [
-      {
-        "files": [
-          "**/__tests__/*.{j,t}s?(x)",
-          "**/tests/unit/**/*.spec.{j,t}s?(x)"
-        ],
-        "env": {
-          "jest": true
-        }
-      }
-    ]
+    "rules": {}
   },
   "browserslist": [
     "> 1%",
     "last 2 versions",
     "not dead",
     "not ie 11"
-  ],
-  "jest": {
-    "preset": "@vue/cli-plugin-unit-jest"
-  }
+  ]
 }
