--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0-beta1",
     "core-js": "^3.8.3",
+    "json-server": "^0.17.1",
     "vee-validate": "^4.5.11",
     "vue": "^3.2.13",
     "vue-loading-overlay": "5.0",
